feat(AnimationManager, TemplateManager): Refactor animation and template loading to use JSON format; add README files for new locations